[BUG FIXES] Filter now fills the whole page when open on mobile, sort button dropdown added, shop container covers all the children elements

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -7,7 +7,9 @@ $secondary-color: rgb(204, 204, 204);
 html,
 body,
 main,
-.shop-container {
+.shop-container,
+.filter-open,
+.overlay {
   height: 100%;
 }
 
